Add login and test tweet

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
+API_KEY=iHs0Sf9gRFDtlCLGuCU67Z1Sn
+API_SECRET=X5gBvI5z5aVGsDPBezA0xZ0KMQaqgRPz1OrltTjsVnfPqCGCrO
+BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAOenYwEAAAAAZcb7IHWwwWpwN34nlE%2BsfdYNKzo%3DokrTT6QvGwSS74dVq9Rh8P3sYPLV3znR9VMbsNxLGok0cl86NJ
+ACCESS_TOKEN=1490032056516104196-mFaDQ61MlhSPb7P8Sst2uIMY5IYyTV
+ACCESS_TOKEN_SECRET=NNJprcmvvUIMELgte3ZTthNlkzMuCvPVNQlCXOkpzzL06
 CLIENT_ID=Z05wck0xQ0ZxdlpNYWU5TmdybUg6MTpjaQ
 CLIENT_SECRET=nD3-kQ3mC0mvX5rjRlG8weUWQYH4xjJDd1Oe-ce2MNa4p5MOTM
