--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/alexochs/FlashPost#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "twitter-api-v2": "^1.10.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "firebase": "^9.6.6",
+    "firebase-admin": "^10.0.2",
+    "twitter-api-v2": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
