--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
+    "firebaseui": "^6.0.0",
     "twitter-api-v2": "^1.10.0"
   },
   "devDependencies": {
